2006-04-19  Andrew Cagney  <cagney@redhat.com>

	* eio/cni/PtraceByteBuffer.cxx (newPerror): Add pid and addr
	parameters.  Update calls.

2006-04-04  Andrew Cagney  <cagney@redhat.com>

	* eio/cni/PtraceByteBuffer.cxx: Import; no longer calls abort.

2006-01-11  Andrew Cagney  <cagney@redhat.com>

	Import 2006-01-11.
	* Mask.java, Misc.java, Pool.java, Print.java, PrintWriter.java,
	Scanner.java, TestPool.java: Delete.
	* EXCEPTION, dwarf/PrintDebugAbbrev.java,
	dwarf/PrintDebugAranges.java, dwarf/PrintDebugFrame.java,
	dwarf/PrintDebugInfo.java, dwarf/PrintDebugLine.java,
	dwarf/PrintDebugLoc.java, dwarf/PrintDebugMacinfo.java,
	dwarf/PrintDebugPubs.java, dwarf/PrintDebugRanges.java,
	dwarf/PrintDebugStr.java, dwarf/TestDebugLine.java, elf/Elf.java,
	elf/PrintEhdr.java, elf/PrintNote.java, elf/PrintPhdr.java,
	elf/PrintShdr.java, elf/PrintSym.java: Update.
	* elf/TestLib.java, util/Mask.java, util/Misc.java,
	util/Pool.java, util/Print.java, util/PrintWriter.java,
	util/Scanner.java, util/TestPool.java, util/readelf.java: New.

2005-10-03  Andrew Cagney  <cagney@redhat.com>

	* Pool.java, Print.java, PrintWriter.java, Scanner.java,
	mkjava.sh, package.html, dwarf/DebugAranges.java,
	dwarf/DebugFrame.java, dwarf/package.html,
	eio/PtraceByteBuffer.java, eio/package.html, elf/ElfBuffer.java,
	elf/PrintNote.java, elf/package.html, util/TestReadelf.sh,
	util/readelf.java: Update; more doco; ecj 3.1 warnings.
	
2005-09-22  Andrew Cagney  <cagney@redhat.com>

	* Pool.java, Scanner.java, dwarf/DW.mkjava, dwarf/DebugFrame.java,
	dwarf/DebugLine.java, dwarf/DebugSection.java,
	dwarf/PrintDebugFrame.java, dwarf/PrintDebugLoc.java,
	dwarf/PrintDebugRanges.java, eio/ArrayByteBuffer.java,
	eio/ByteBuffer.java, eio/ByteFileBuffer.java,
	eio/MmapByteBuffer.java, eio/PtraceByteBuffer.java,
	eio/cni/PtraceByteBuffer.cxx, elf/EM.mkjava, elf/ET.mkjava,
	elf/EV.mkjava, elf/Ehdr.java, elf/ElfBuffer.java,
	elf/PrintEhdr.java, elf/PrintPhdr.java, elf/PrintSym.java,