@@ -1,3 +1,8 @@
+2006-04-20  Andrew Cagney  <cagney@redhat.com>
+
+	* eio/cni/PtraceByteBuffer.cxx (newPerror): Use asprintf, instead
+	of snprintf.
+
 2006-04-19  Andrew Cagney  <cagney@redhat.com>
 
 	* eio/cni/PtraceByteBuffer.cxx (newPerror): Add pid and addr
